JBTM-1944 Merge the blacktie and narayana scripts